--- a/data/measure_info.json
+++ b/data/measure_info.json
@@ -5,14 +5,15 @@
     "full_name": "post_hs_education:perc_post_hs_edu",
     "measure": "perc_post_hs_edu",
     "type": "percent",
-    "short_name": "Population with post-high school education",
-    "long_name": "Percent  of population with post-high school education",
-    "short_description": "Percent of the population self-reported to have post-high school level degree",
-    "long_description": "Percent of the population self-reported to have post-high school level degree. Based on American Community Survey Table B15003 in ACS 2015/2019 5-year estimates.",
-    "statement": "{value} of the population in {features.name} has a post-high school education.",
+    "short_name": "Percentage with post-secondary education",
+    "long_name": "Percentage with post-secondary education",
+    "short_description": "Percentage of the population self-reported to have post-secondary education",
+    "long_description": "Percentage of the population self-reported to have post-secondary education. Based on American Community Survey Table B15003 in ACS 2015/2019 5-year estimates.",
+    "statement": "{value} of the population in {features.name} has a post-secondary education.",
+    "equity_category" : "Status",
     "sources": [
       {
-        "name": "American Community Survey",
+        "name": "American Community Survey Table B15003",
         "date_accessed": 2021,
         "url": "https://www.census.gov/data/developers/data-sets/acs-5year.html"
       }
